<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SQLiteLogInApp1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="name">Full Name</string>
    <string name="email">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_display">Display</string>
    <string name="hello">Hello,</string>
    <string name="close">Close</string>

</resources>